--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,10 @@
     "autoload": {
     	"files" : [],
     	"classmap" : [
-    		"App/Itp"
+
     	],
         "psr-4" : {
-            "Itp\\": "App/Itp"
+            "Itp\\": "App/Itp/"
         }
     }
 }
